echoheaders/echoheaders-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: applications
  labels:
    name: application-namespace
